--- a/pom.xml
+++ b/pom.xml
@@ -120,27 +120,27 @@
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
       <version>${mybatis.version}</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>${spring.version}</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>${spring.version}</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-infrastructure</artifactId>
       <version>${spring-batch.version}</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
 
     <!-- Test dependencies -->
@@ -149,56 +149,64 @@
       <groupId>com.atomikos</groupId>
       <artifactId>transactions-jdbc</artifactId>
       <version>5.0.8</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
       <version>10.14.2.0</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.jboss.byteman</groupId>
       <artifactId>byteman-bmunit</artifactId>
       <version>4.0.13</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>${spring.version}</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>${spring.version}</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-core</artifactId>
       <version>${spring-batch.version}</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-test</artifactId>
       <version>${spring-batch.version}</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
       <exclusions>
            <exclusion>
                 <groupId>junit</groupId>
@@ -211,35 +219,40 @@
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <version>2.5.1</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>3.5.11</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>3.17.2</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>com.mockrunner</groupId>
       <artifactId>mockrunner-core</artifactId>
       <version>2.0.4</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -267,7 +280,8 @@
       <groupId>com.mockrunner</groupId>
       <artifactId>mockrunner-ejb</artifactId>
       <version>2.0.4</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
       <exclusions>
         <exclusion>
           <groupId>commons-beanutils</groupId>
@@ -283,7 +297,8 @@
       <groupId>com.mockrunner</groupId>
       <artifactId>mockrunner-jdbc</artifactId>
       <version>2.0.4</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -296,13 +311,15 @@
       <groupId>jakarta.transaction</groupId>
       <artifactId>jakarta.transaction-api</artifactId>
       <version>1.3.3</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
       <version>4.0.4</version>
-      <scope>test</scope>
+      <!--<scope>test</scope>-->
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
